--- a/chat.html
+++ b/chat.html
@@ -1,29 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Chat - Messenger</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Chat</title>
 </head>
 <body>
-  <div class="chat-container">
-    <h2>مرحباً <span id="userDisplay"></span></h2>
-    
-    <select id="receiverSelect">
-      <option disabled selected>اختر مستخدم للمراسلة</option>
-    </select>
+  <h2>مرحباً، <span id="userDisplay"></span></h2>
 
-    <div id="messages" style="height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin-top: 10px;"></div>
+  <input type="text" id="recipientInput" placeholder="اكتب اسم المستخدم الذي تريد مراسلته">
+  <input type="text" id="messageInput" placeholder="اكتب رسالتك">
+  <button id="sendBtn">إرسال</button>
 
-    <input type="text" id="messageInput" placeholder="اكتب رسالتك هنا">
-    <button onclick="sendMessage()">إرسال</button>
-  </div>
+  <ul id="chatBox"></ul>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-  
-  <!-- سكربت المراسلة -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
