--- a/chat.html
+++ b/chat.html
@@ -2,18 +2,37 @@
 <html>
 <head>
   <title>Chat</title>
+  <style>
+    body { font-family: Arial; background: #f9f9f9; padding: 20px; text-align: center; }
+    h2 { margin-bottom: 10px; }
+    input { padding: 10px; width: 250px; margin: 5px; border: 1px solid #ccc; border-radius: 5px; }
+    button { padding: 10px 20px; margin: 5px; background: #2196F3; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    button:hover { background: #1976D2; }
+    ul { list-style: none; padding: 0; max-height: 300px; overflow-y: auto; text-align: left; margin-top: 20px; }
+    li { padding: 8px; background: #fff; border: 1px solid #ddd; border-radius: 5px; margin-bottom: 5px; }
+    #top-bar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+  </style>
 </head>
 <body>
-  <h2>مرحباً، <span id="userDisplay"></span></h2>
+  <div id="top-bar">
+    <h2>مرحباً، <span id="userDisplay"></span></h2>
+    <button onclick="logout()">خروج</button>
+  </div>
 
   <input type="text" id="recipientInput" placeholder="اكتب اسم المستخدم الذي تريد مراسلته">
+  <br>
   <input type="text" id="messageInput" placeholder="اكتب رسالتك">
+  <br>
   <button id="sendBtn">إرسال</button>
 
   <ul id="chatBox"></ul>
 
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+  <script>
+    function logout() {
+      localStorage.removeItem("username");
+      window.location.href = "index.html";
+    }
+  </script>
 </body>
 </html>
