--- a/chat.html
+++ b/chat.html
@@ -4,9 +4,18 @@
   <title>Chat</title>
   <style>
     body { font-family: Arial; background: #f9f9f9; padding: 20px; text-align: center; }
-    h2 { margin-bottom: 10px; }
-    input { padding: 10px; width: 250px; margin: 5px; border: 1px solid #ccc; border-radius: 5px; }
-    button { padding: 10px 20px; margin: 5px; background: #2196F3; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    input, button {
+      padding: 10px;
+      width: 250px;
+      margin: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      background: #2196F3;
+      color: white;
+      cursor: pointer;
+    }
     button:hover { background: #1976D2; }
     ul { list-style: none; padding: 0; max-height: 300px; overflow-y: auto; text-align: left; margin-top: 20px; }
     li { padding: 8px; background: #fff; border: 1px solid #ddd; border-radius: 5px; margin-bottom: 5px; }
