--- a/chat.html
+++ b/chat.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدردشة</title>
+  <title>Chat | Messenger</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">
-      <h2>المحادثة</h2>
-      <button onclick="logout()">خروج</button>
-    </div>
-    <div id="messages" class="messages-box"></div>
-    <div class="message-input">
-      <input type="text" id="messageInput" placeholder="اكتب رسالة...">
-      <input type="file" id="imageInput" accept="image/*">
-      <button onclick="sendMessage()">إرسال</button>
-    </div>
+    <div id="chat-box"></div>
+    <input type="file" id="imageInput">
+    <input type="text" id="messageInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Send</button>
   </div>
-
-  <script type="module" src="firebase-config.js"></script>
   <script type="module" src="chat.js"></script>
 </body>
 </html>
