--- a/profile.html
+++ b/profile.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>الملف الشخصي</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Edit Profile | Messenger</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="edit-profile-container">
-    <h2>الملف الشخصي</h2>
-    <div id="profileContent">
-      <img id="userImage" src="" alt="صورة المستخدم" width="120" height="120" />
-      <p><strong>اسم المستخدم:</strong> <span id="username"></span></p>
-      <p><strong>الاسم:</strong> <span id="displayName"></span></p>
-      <p><strong>آخر ظهور:</strong> <span id="lastSeen"></span></p>
-      <a href="edit-profile.html"><button>تعديل الملف</button></a>
-    </div>
+  <div class="container">
+    <h2>Edit Profile</h2>
+    <input type="text" id="newDisplayName" placeholder="New Display Name">
+    <button onclick="updateProfileName()">Update</button>
+    <button onclick="logout()">Logout</button>
   </div>
-
-  <script type="module" src="firebase-config.js"></script>
   <script type="module" src="profile.js"></script>
 </body>
 </html>
