--- a/chat.html
+++ b/chat.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>Chat | Messenger</title>
+  <title>الدردشة - ماسنجر</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="chat-container">
-    <div id="chat-box"></div>
-    <input type="file" id="imageInput">
-    <input type="text" id="messageInput" placeholder="Type a message...">
-    <button onclick="sendMessage()">Send</button>
+    <div class="header">
+      <h3>محادثة مع <span id="chatWith"></span></h3>
+      <span id="lastSeen">آخر ظهور: جاري التحميل...</span>
+    </div>
+    <div id="messages"></div>
+    <input type="file" id="imageInput" style="display:none" accept="image/*" onchange="sendImage(event)">
+    <div class="chat-input">
+      <input type="text" id="messageInput" placeholder="اكتب رسالة...">
+      <button onclick="sendMessage()">إرسال</button>
+      <button onclick="document.getElementById('imageInput').click()">صورة</button>
+    </div>
   </div>
-  <script type="module" src="chat.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
