--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>Login | Messenger</title>
+  <title>تسجيل الدخول - ماسنجر</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h2>Login</h2>
-    <input type="email" id="loginEmail" placeholder="Email">
-    <input type="password" id="loginPassword" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+  <div class="login-container">
+    <h2>تسجيل الدخول</h2>
+    <input type="text" id="login-username" placeholder="اسم المستخدم">
+    <input type="password" id="login-password" placeholder="كلمة المرور">
+    <button onclick="login()">دخول</button>
+    <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
   </div>
-  <script type="module" src="login.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
