--- a/signup.html
+++ b/signup.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>إنشاء حساب - ماسنجر</title>
+  <title>إنشاء حساب - rengeM</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="signup-container">
-    <h2>إنشاء حساب</h2>
-    <input type="text" id="fullname" placeholder="الاسم الكامل">
-    <input type="text" id="signup-username" placeholder="اسم المستخدم">
-    <input type="password" id="signup-password" placeholder="كلمة المرور">
-    <button onclick="signup()">تسجيل</button>
+  <div class="container">
+    <h2>إنشاء حساب جديد</h2>
+    <input type="text" id="fullName" placeholder="الاسم الكامل">
+    <input type="text" id="username" placeholder="اسم المستخدم">
+    <input type="password" id="password" placeholder="كلمة المرور">
+    <button onclick="signup()">إنشاء الحساب</button>
+    <p>هل لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
   </div>
-  <script src="script.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
+  <script src="firebase.js"></script>
+  <script>
+    const db = firebase.database();
+
+    function signup() {
+      const fullName = document.getElementById('fullName').value.trim();
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value;
+
+      if (!fullName || !username || !password) {
+        alert('يرجى ملء جميع الحقول');
+        return;
+      }
+
+      const usersRef = db.ref("users");
+
+      usersRef.child(username).get().then(snapshot => {
+        if (snapshot.exists()) {
+          alert("اسم المستخدم مستخدم بالفعل");
+        } else {
+          usersRef.child(username).set({
+            fullName: fullName,
+            username: username,
+            password: password,
+            bio: "",
+            profileImage: "default.png",
+            online: true,
+            lastSeen: new Date().toISOString()
+          }).then(() => {
+            localStorage.setItem("username", username);
+            window.location.href = "chat.html";
+          });
+        }
+      });
+    }
+  </script>
 </body>
 </html>
