--- a/profile.html
+++ b/profile.html
@@ -1,18 +1,84 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>ملفي الشخصي</title>
+  <title>ملفي الشخصي - rengeM</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .profile-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
-  <div class="profile-container">
-    <img src="default-avatar.png" id="profileImage" alt="صورة المستخدم">
-    <h2 id="profileFullname">الاسم الكامل</h2>
-    <p id="profileUsername">@username</p>
-    <p id="profileBio">نبذة عني...</p>
-    <button onclick="editProfile()">تعديل الملف الشخصي</button>
+  <div class="container">
+    <h2>ملفي الشخصي</h2>
+    <img id="profileImage" class="profile-img" src="default.png" alt="الصورة الشخصية">
+    <input type="file" id="imageInput"><br><br>
+
+    <label>اسم المستخدم:</label>
+    <p id="usernameField"></p>
+
+    <label>الاسم الكامل:</label>
+    <input type="text" id="fullName"><br>
+
+    <label>السيرة الذاتية:</label>
+    <textarea id="bio" rows="3"></textarea><br>
+
+    <button onclick="saveProfile()">حفظ التعديلات</button>
   </div>
-  <script src="script.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
+  <script src="firebase.js"></script>
+  <script>
+    const db = firebase.database();
+    const username = localStorage.getItem("username");
+    const userRef = db.ref("users/" + username);
+
+    if (!username) {
+      window.location.href = "login.html";
+    }
+
+    document.getElementById("usernameField").textContent = username;
+
+    userRef.once("value").then(snapshot => {
+      const data = snapshot.val();
+      if (data) {
+        document.getElementById("fullName").value = data.fullName || "";
+        document.getElementById("bio").value = data.bio || "";
+        if (data.profileImage) {
+          document.getElementById("profileImage").src = data.profileImage;
+        }
+      }
+    });
+
+    document.getElementById("imageInput").addEventListener("change", function() {
+      const file = this.files[0];
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        document.getElementById("profileImage").src = e.target.result;
+      }
+      reader.readAsDataURL(file);
+    });
+
+    function saveProfile() {
+      const fullName = document.getElementById("fullName").value;
+      const bio = document.getElementById("bio").value;
+      const profileImage = document.getElementById("profileImage").src;
+
+      userRef.update({
+        fullName: fullName,
+        bio: bio,
+        profileImage: profileImage
+      }).then(() => {
+        alert("تم حفظ التعديلات بنجاح");
+      });
+    }
+  </script>
 </body>
 </html>
