--- a/profile.html
+++ b/profile.html
@@ -2,83 +2,89 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>ملفي الشخصي - rengeM</title>
+  <title>الملف الشخصي | rengeM</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .profile-img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 10px;
-    }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <h2>ملفي الشخصي</h2>
-    <img id="profileImage" class="profile-img" src="default.png" alt="الصورة الشخصية">
-    <input type="file" id="imageInput"><br><br>
+  <div class="container profile-box">
+    <h1>الملف الشخصي</h1>
+    
+    <img id="profile-image" src="default.png" alt="الصورة الشخصية" width="100" height="100">
+    <p id="fullname">الاسم الكامل: </p>
+    <p id="username">اسم المستخدم: </p>
+    <p id="bio">السيرة الذاتية: </p>
+    <p id="status">حالة النشاط: </p>
+    <p id="last-seen">آخر ظهور: </p>
 
-    <label>اسم المستخدم:</label>
-    <p id="usernameField"></p>
+    <h2>تعديل الملف الشخصي</h2>
+    <input type="text" id="new-fullname" placeholder="الاسم الكامل">
+    <textarea id="new-bio" placeholder="السيرة الذاتية"></textarea>
+    <input type="file" id="new-profile-image">
+    <button onclick="updateProfile()">حفظ التعديلات</button>
 
-    <label>الاسم الكامل:</label>
-    <input type="text" id="fullName"><br>
-
-    <label>السيرة الذاتية:</label>
-    <textarea id="bio" rows="3"></textarea><br>
-
-    <button onclick="saveProfile()">حفظ التعديلات</button>
+    <button onclick="logout()">تسجيل الخروج</button>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
-  <script src="firebase.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
+  <!-- سكربتات المشروع -->
+  <script src="firebase-config.js"></script>
+  <script src="script.js"></script>
+
   <script>
-    const db = firebase.database();
-    const username = localStorage.getItem("username");
-    const userRef = db.ref("users/" + username);
-
-    if (!username) {
-      window.location.href = "login.html";
-    }
-
-    document.getElementById("usernameField").textContent = username;
-
-    userRef.once("value").then(snapshot => {
-      const data = snapshot.val();
-      if (data) {
-        document.getElementById("fullName").value = data.fullName || "";
-        document.getElementById("bio").value = data.bio || "";
-        if (data.profileImage) {
-          document.getElementById("profileImage").src = data.profileImage;
-        }
-      }
-    });
-
-    document.getElementById("imageInput").addEventListener("change", function() {
-      const file = this.files[0];
-      const reader = new FileReader();
-      reader.onload = function(e) {
-        document.getElementById("profileImage").src = e.target.result;
-      }
-      reader.readAsDataURL(file);
-    });
-
-    function saveProfile() {
-      const fullName = document.getElementById("fullName").value;
-      const bio = document.getElementById("bio").value;
-      const profileImage = document.getElementById("profileImage").src;
-
-      userRef.update({
-        fullName: fullName,
-        bio: bio,
-        profileImage: profileImage
-      }).then(() => {
-        alert("تم حفظ التعديلات بنجاح");
+    // جلب بيانات الملف الشخصي
+    function loadProfile() {
+      const username = localStorage.getItem("username");
+      db.ref("users/" + username).once("value").then(snapshot => {
+        const user = snapshot.val();
+        document.getElementById("profile-image").src = user.profileImage;
+        document.getElementById("fullname").innerText = "الاسم الكامل: " + user.fullName;
+        document.getElementById("username").innerText = "اسم المستخدم: " + user.username;
+        document.getElementById("bio").innerText = "السيرة الذاتية: " + user.bio;
+        document.getElementById("status").innerText = "حالة النشاط: " + (user.active ? "نشط" : "غير نشط");
+        document.getElementById("last-seen").innerText = "آخر ظهور: " + user.lastSeen;
       });
     }
+
+    // تحديث الملف الشخصي
+    function updateProfile() {
+      const newFullname = document.getElementById("new-fullname").value;
+      const newBio = document.getElementById("new-bio").value;
+      const newImage = document.getElementById("new-profile-image").files[0];
+
+      const username = localStorage.getItem("username");
+
+      let imageUrl = "default.png";  // قيمة افتراضية في حالة عدم تحميل صورة جديدة
+      if (newImage) {
+        // رفع الصورة إلى Firebase Storage (اختياري حسب الحاجة)
+        const storageRef = firebase.storage().ref("profileImages/" + username + ".jpg");
+        storageRef.put(newImage).then(snapshot => {
+          snapshot.ref.getDownloadURL().then(url => {
+            imageUrl = url;
+            updateUserData(newFullname, newBio, imageUrl);
+          });
+        });
+      } else {
+        updateUserData(newFullname, newBio, imageUrl);
+      }
+    }
+
+    function updateUserData(fullname, bio, imageUrl) {
+      const username = localStorage.getItem("username");
+      db.ref("users/" + username).update({
+        fullName: fullname,
+        bio: bio,
+        profileImage: imageUrl
+      }).then(() => {
+        alert("تم تحديث الملف الشخصي بنجاح!");
+        loadProfile(); // إعادة تحميل البيانات المحدثة
+      });
+    }
+
+    // تنفيذ التحميل للملف الشخصي
+    loadProfile();
   </script>
 </body>
 </html>
