--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>تسجيل الدخول - ماسنجر</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل حساب</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-database.js"></script>
 </head>
 <body>
-  <div class="login-container">
-    <h2>تسجيل الدخول</h2>
-    <input type="text" id="login-username" placeholder="اسم المستخدم">
-    <input type="password" id="login-password" placeholder="كلمة المرور">
-    <button onclick="login()">دخول</button>
-    <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
-  </div>
-  <script src="script.js"></script>
+
+    <div class="container">
+        <h2>تسجيل حساب جديد</h2>
+        <form id="signup-form">
+            <input type="text" id="full-name" placeholder="الاسم الكامل" required>
+            <input type="text" id="username" placeholder="اسم المستخدم" required>
+            <input type="password" id="password" placeholder="كلمة المرور" required>
+            <button type="submit">تسجيل</button>
+        </form>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
