--- a/settings.html
+++ b/settings.html
@@ -1,71 +1,35 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>الإعدادات - rengeM</title>
+  <title>الإعدادات | rengeM</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body.dark-mode {
-      background-color: #121212;
-      color: white;
-    }
-    .container {
-      max-width: 400px;
-      margin: auto;
-      padding: 20px;
-    }
-    button, a {
-      margin: 10px 0;
-      display: block;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
-    <h2>الإعدادات</h2>
-
+    <h1 class="logo">rengeM</h1>
     <button onclick="logout()">تسجيل الخروج</button>
-    <button onclick="goToProfile()">تعديل الملف الشخصي</button>
-
-    <button onclick="toggleTheme()">تبديل الوضع (نهاري/ليلي)</button>
-    <button onclick="toggleActivity()">تبديل حالة النشاط</button>
-
-    <h4>الإبلاغ عن مشكلة</h4>
-    <a href="https://www.instagram.com/5_x_s/" target="_blank">إنستغرام</a>
+    <br><br>
+    <label>
+      <input type="checkbox" id="darkMode" onchange="toggleTheme()"> الوضع الليلي
+    </label>
+    <br><br>
+    <button onclick="location.href='edit-profile.html'">تعديل الملف الشخصي</button>
+    <br><br>
+    <p>للإبلاغ عن مشكلة:</p>
+    <a href="https://www.instagram.com/5_x_s/" target="_blank">إنستغرام</a> | 
     <a href="https://t.me/UUYFU" target="_blank">تيليجرام</a>
   </div>
 
   <script>
-    const username = localStorage.getItem("username");
-    if (!username) {
-      window.location.href = "login.html";
-    }
-
     function logout() {
-      localStorage.removeItem("username");
+      localStorage.removeItem("currentUser");
       window.location.href = "login.html";
-    }
-
-    function goToProfile() {
-      window.location.href = "profile.html";
     }
 
     function toggleTheme() {
-      document.body.classList.toggle("dark-mode");
-    }
-
-    function toggleActivity() {
-      const db = firebase.database();
-      const ref = db.ref("users/" + username + "/active");
-      ref.once("value").then(snapshot => {
-        ref.set(!snapshot.val());
-        alert("تم تغيير حالة النشاط");
-      });
+      document.body.classList.toggle("dark");
     }
   </script>
-
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
-  <script src="firebase.js"></script>
 </body>
 </html>
